日志添加和web配置相关